# Novireon

./: README.md  bot.py  config.py  logging_config.py  mongo_crud.py  pyproject.toml  start.py
Novireon/: bot.py
Novireon/cogs/Player/: __init__.py  main.py  monster_siren.py  setup.py  spotify.py  youtube.py
Novireon/cogs/Player/core/: checkers.py  functions.py  utils.py
Novireon/cogs/Player/core/view/: control_views.py  player_view.py
Novireon/cogs/ServerLogger/: __init__.py  main.py  setup.py  utils.py
Novireon/cogs/Utility/: __init__.py  miq.py
Novireon/config/: MIQ_config.toml  path_config.py
Novireon/src/discord_event_watcher/: __init__.py  member.py  message.py
Novireon/src/util/: config.py
cogs/Music/: __init__.py  main.py  monster_siren.py  youtube.py
cogs/Music/core/: music_checkers.py  music_functions.py  music_setup.py  music_utils.py
cogs/Music/core/view/: music_view.py
cogs/Player/: __init__.py  errors.py  main.py  monster_siren.py  setup.py  spotify.py  youtube.py
cogs/Player/core/: checkers.py  functions.py  player_checkers.py  player_errors.py  player_functions.py  player_utils.py  setup.py  utils.py
cogs/Player/core/view/: control_views.py  player_view.py
cogs/ServerLogger/: __init__.py  main.py  setup.py  utils.py
cogs/Utility/: __init__.py  miq.py  ping.py  role_giver.py  roll.py
config/: MIQ_config.py  Music_config.py  Music_config.toml  Player_config.toml  global_config.py
src/discord_event_watcher/: __init__.py  automod.py  member.py  message.py
src/util/: config.py
