[project]
name = "Novireon"
version = "0.3.0-alpha"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pydub>=0.25.1",
    "pymongo>=4.15.1",
    "pynacl>=1.6.0",
    "python-box[toml]>=7.3.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "spotipy>=2.25.2",
    "yt-dlp==2026.1.31",
]
